@@ -67,8 +67,8 @@ channelsnames[15] = "iConcerts (S)";
 channels[15] = "S23.5E-3-3211-20823";
 channelsnames[16] = "SyFy Universal (S)";
 channels[16] = "S23.5E-53-1105-20822";
-channelsnames[18] = "NG Wild DUT (S)";
-channels[18] = "S23.5E-3-3210-5145";
+channelsnames[18] = "NG Wild (S)";
+channels[18] = "S23.5E-3-3210-5072";
 //channelsnames[19] = "History channel DUT (S)";
 //channels[19] = "S23.5E-3-3210-5140";
 channelsnames[20] = "Animax (S)";
@@ -250,7 +250,7 @@ channels[120] = "S28.2E-2-2041-9220";
 channelsnames[121] = "Film4 +1 (S)";
 channels[121] = "S28.2E-2-2041-9225";
 channelsnames[122] = "Men & Movies (S)";
-channels[122] = "S28.2E-2-2602-54110";
+channels[122] = "S28.2E-2-2076-54110";
 channelsnames[123] = "Men & Movies+1 (S)";
 channels[123] = "S28.2E-2-2081-51120";
 channelsnames[124] = "movies4men (S)";
@@ -378,7 +378,7 @@ channels[244] = "S28.2E-2-2301-52105";
 channelsnames[245] = "horror ch+1 (S)";
 channels[245] = "S28.2E-2-2311-52002";
 channelsnames[246] = "Men & Movies (S)";
-channels[246] = "S28.2E-2-2602-54110";
+channels[246] = "S28.2E-2-2076-54110";
 channelsnames[247] = "Men & Movies+1 (S)";
 channels[247] = "S28.2E-2-2081-51120";
 channelsnames[248] = "movies4men (S)";
@@ -419,7 +419,7 @@ channels[268] = "S28.2E-2-2031-6025";
 channelsnames[269] = "Sky Arts 1 (S)";
 channels[269] = "S28.2E-2-2030-4604";
 channelsnames[270] = "Sky Arts 2 (S)";
-channels[270] = "S28.2E-2-2401-5206";
+channels[270] = "S28.2E-2-2023-4900";
 channelsnames[271] = "Sony TV (S)";
 channels[271] = "S28.2E-2-2311-52005";
 channelsnames[272] = "Sony TV +1 (S)";
