@@ -21,7 +21,7 @@
 //
 //
 
-var Version = "0.23.6"
+var Version = "0.23.9"
 
 window.onkeydown = onKeyDown;
 
@@ -310,7 +310,7 @@ function decChan(step) {
 }
 
 function VolumeUp() {
-	if (Volume < 10) {
+	if (Volume < 5) {
 		var VolStep = 1;
 	} else {
 		var VolStep = VolumeStep;
@@ -325,7 +325,7 @@ function VolumeUp() {
 }
 
 function VolumeDown() {
-	if (Volume > 10) {
+	if (Volume > 5) {
 		var VolStep = VolumeStep;
 	} else {
 		var VolStep = 1;
@@ -376,7 +376,7 @@ function createPip() {
 
 function addPipVideoplane() {
   var pipVideoDiv = document.getElementById("pipVideoDiv");
-  pipVideoDiv.innerHTML = "<videoplane id='pipvideoplane' index=1 style='position:fixed;left:70%;top:10%;height:20%;width:20%;z-index:550;'></videoplane>";
+  pipVideoDiv.innerHTML = "<videoplane id='pipvideoplane' index=1 style='position:fixed;left:70%;top:60%;height:20%;width:20%;z-index:50;'></videoplane>";
   document.body.appendChild(pipVideoDiv);
 }
 
@@ -385,7 +385,16 @@ try {
 	if (pipPlayer.getState() != pipPlayer.STATE_IDLE) {
 		pipPlayer.close();
 	 }
-	uri = ServerAdres[0] + uri;
+
+	if (ServerAdres[ChanGroup] == "MultiCast" ) {
+ 	SI=channels[currChan].split("-");
+	uri = SI[4];
+	} else if (ServerAdres[ChanGroup] == "FullURL" ) {
+	// uri = ready!
+	} else {
+	uri = ServerAdres[ChanGroup] + uri;
+	}
+
 	pipPlayer.open(uri);
 	pipPlayer.play(1000);
   } catch (e) {
@@ -453,8 +462,13 @@ function play(uri) {
 
 function preview(urip) {
 	if(SwitchGuide) {
-	play(urip);
+		play(urip);
+	} else if (PipSwitchGuide && fullupdate) {
+		pipplay(urip);
 	}
+
+
+
 	if (isSchedule) { schedule.style.opacity = 0; isSchedule = 0;}
 	if (epgactive) { osdepginfo.style.opacity = 0; osdepginfonext.style.opacity = 0; epgactive = 0;}
 	showChannelList();
@@ -592,10 +606,16 @@ function startTimeshiftBuffering() {
 
 
 function FullScreen() {
-			videoplane.style.width = "100%";
-			videoplane.style.height = "100%";
-			videoplane.style.left = "0px";
-			videoplane.style.top = "0px";
+	videoplane.style.width = "100%";
+	videoplane.style.height = "100%";
+	videoplane.style.left = "0px";
+	videoplane.style.top = "0px";
+	if(PipSwitchGuide && pipPlayer){
+		if (pipPlayer.getState() != pipPlayer.STATE_IDLE) {
+			pipPlayer.close();
+		 }
+		pipPlayer.releaseInstance();
+	}
 }
 
 
@@ -839,6 +859,7 @@ function onKeyDown(event) {
 			isFullscreen = 1;
 			FullScreen();
 			currChan = preChan;
+			ChanGroup = preGrp;
 		}
 	}
 	break;
@@ -908,6 +929,10 @@ function onKeyDown(event) {
    case KEY_FAV:
    case "Scroll":
 		if(isFullscreen) {
+			if(PipSwitchGuide){
+//				addPipVideoplane();
+				createPip();
+			}
 			NowNext = 0;
 			videoplane.style.width = (320*Xfactor[Set_Res])+"px";
 			videoplane.style.height = (240*Yfactor[Set_Res])+"px";
@@ -921,6 +946,7 @@ function onKeyDown(event) {
 			showChannelList();
 			if(!SwitchGuide) {
 			preChan = currChan;
+			preGrp = ChanGroup;
 			}
 		} else {
 			isSchedule = 0;
@@ -929,6 +955,7 @@ function onKeyDown(event) {
 			FullScreen();
 			if(!SwitchGuide) {
 			currChan = preChan;
+			ChanGroup = preGrp;
 			}
 		}
 		break;
@@ -1008,12 +1035,44 @@ function onKeyDown(event) {
 	VolumeDown();
 	break;
 
-	case "MediaRewind":
+    case "MediaRewind":
+	if(isFullscreen) {
 	      mediaPlayer.play(mediaPlayer.PACE_REWIND);
-		break;
-	case "MediaForward":
+	} else {
+		count = 0; Change = 0;
+		defChan[ChanGroup] = currChan;
+		do {
+			do
+				ChanGroup = ChanGroup - 1;
+			while (protChn[ChanGroup] == 1 && ShowProtectedChannels == 1) 
+			if (ChanGroup < 0) {
+				ChanGroup = 9;
+			}
+		}
+		while (!minChan[ChanGroup]);
+		currChan = defChan[ChanGroup];
+		preview(channels[currChan]);
+	}
+	break;
+    case "MediaForward":
+	if(isFullscreen) {
 	      mediaPlayer.play(mediaPlayer.PACE_FASTFORWARD);
-		break;
+	} else {
+	count = 0; Change = 0;
+	defChan[ChanGroup] = currChan;
+	do{
+		do
+			ChanGroup = ChanGroup + 1;
+		while (protChn[ChanGroup] == 1 && ShowProtectedChannels == 1)
+		if (ChanGroup > 9) {
+			ChanGroup = 0;
+			}
+		}
+	while (!minChan[ChanGroup]);
+	currChan = defChan[ChanGroup];
+        preview(channels[currChan]);
+	}
+	break;
 	case "MediaPlayPause":
 
 		if(isFullscreen && PauseOnServer) {
@@ -1181,7 +1240,7 @@ function showVolume() {
 	if (osdVolumetimeout) {
 		clearTimeout(osdVolumetimeout);
 	}
-	osdvolume.innerHTML = Lang[1] + " : \uE007" + (new Array(Volume)).join("\uE008") + (new Array(100 - Volume)).join("\uE009") + "\uE00A";
+	osdvolume.innerHTML = Lang[1] + " : " + Volume + "% \uE007" + (new Array(Volume)).join("\uE008") + (new Array(100 - Volume)).join("\uE009") + "\uE00A";
 	osdvolume.style.opacity = 1;
 	osdVolumetimeout = setTimeout("osdvolume.style.opacity = 0;", ShowOsdTime);
 }
@@ -4214,12 +4273,9 @@ function ClearScreen() {
 <body onload="onLoad()" onunload="onUnload()">
     	<embed type="application/x-motorola-toi" hidden="true">
 
-	<div id="channelList" style="width:100%; height:48%; position:absolute; left:7%; top:4%;"></div>
-
-
-	<div id="colorkeys" style="width:100%; position:absolute; left:10%; top:84%;"></div>
-
-	<div id="chanlistepg" style="width:42%; position:absolute; left:7%; top:50%;"> 	</div>
+	<div id="channelList" style="width:100%; height:48%; position:absolute; left:7%; top:4%;;z-index:400;"></div>
+	<div id="colorkeys" style="width:100%; position:absolute; left:10%; top:84%;z-index:401;"></div>
+	<div id="chanlistepg" style="width:42%; position:absolute; left:7%; top:50%;z-index:402;"></div>
 
 	<videoplane id='videoplane' style='position:absolute;left:0px;top:0px;height:100%;width:100%;z-index:500;'></videoplane>
 	<div id="pipVideoDiv" ></div>
