@@ -17,7 +17,8 @@ VDR 1.7.29 / 2.1.1
 	Added group 4, some Polish channels (NC+ sorting order)
 	During play '0' jumps to 0:00:00 and now resets posmark index also to 0
 	Sort the Recordingslist so no double maps are shown
-	Volume steps are 1, if volume < 10
+	Volume steps are 1, if volume < 5
+	in EPG/ Guide view you can switch groups with << and >> (Live Update only if 19x3 with pip enabled image)
 
 
 0.22	Updated EPG filter for 42E, canal sat (tid 1088), canal+ (tid 1060), CDS (veronica, iConcerts, Animax)
